--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.bg-light{
+  background-color: rgb(248, 249, 250);
+}
+.small{
+  font-size:90%;
+}
+.text-bg-dark{
+  background: #444444 !important;
+}
