--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,8 +7,7 @@ body {
 }
 
 .form-signin {
-  max-width: 380px;
-  padding: 15px;
+  max-width: 360px;
 }
 
 .form-signin .form-floating:focus-within {
@@ -25,4 +24,437 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+
+.cls-1 {
+  isolation: isolate;
+}
+
+.cls-2 {
+  fill: url(#linear-gradient);
+}
+
+.cls-3 {
+  fill: #e7e7e7;
+}
+
+.cls-4 {
+  fill: #e7e7e7;
+}
+
+.cls-5 {
+  fill: #e7e7e7;
+}
+
+.cls-6 {
+  fill: #e7e7e7;
+}
+
+.cls-55, .cls-7 {
+  fill: #e7e7e7;
+}
+
+.cls-8 {
+  fill: #ffcebd;
+}
+
+.cls-9 {
+  fill: #ff5574;
+}
+
+.cls-10, .cls-145 {
+  fill: #191c3c;
+}
+
+.cls-11 {
+  fill: #0d6efd;
+}
+
+.cls-12, .cls-22 {
+  fill: #fff;
+}
+
+.cls-13 {
+  fill: #4d5068;
+}
+
+.cls-14, .cls-18 {
+  fill: #231f20;
+}
+
+.cls-14 {
+  opacity: 0.15;
+}
+
+.cls-15 {
+  fill: #474963;
+}
+
+.cls-16 {
+  fill: #75778a;
+}
+
+.cls-17 {
+  fill: #3b479a;
+}
+
+.cls-145, .cls-18 {
+  opacity: 0.3;
+}
+
+.cls-19 {
+  fill: #ffc043;
+}
+
+.cls-20, .cls-30 {
+  fill: #f0f1fe;
+}
+
+.cls-21 {
+  mix-blend-mode: multiply;
+}
+
+.cls-22, .cls-66 {
+  opacity: 0;
+}
+
+.cls-23, .cls-68 {
+  fill: #fdfdff;
+}
+
+.cls-23, .cls-67 {
+  opacity: 0.024;
+}
+
+.cls-24, .cls-70 {
+  fill: #fbfcff;
+}
+
+.cls-24, .cls-69 {
+  opacity: 0.049;
+}
+
+.cls-25, .cls-72 {
+  fill: #f9faff;
+}
+
+.cls-25, .cls-71 {
+  opacity: 0.073;
+}
+
+.cls-26, .cls-74 {
+  fill: #f7f8ff;
+}
+
+.cls-26, .cls-73 {
+  opacity: 0.098;
+}
+
+.cls-27, .cls-76 {
+  fill: #f6f6fe;
+}
+
+.cls-27, .cls-75 {
+  opacity: 0.122;
+}
+
+.cls-28, .cls-78 {
+  fill: #f4f5fe;
+}
+
+.cls-28, .cls-77 {
+  opacity: 0.146;
+}
+
+.cls-29, .cls-80 {
+  fill: #f2f3fe;
+}
+
+.cls-29, .cls-79 {
+  opacity: 0.171;
+}
+
+.cls-30, .cls-81 {
+  opacity: 0.195;
+}
+
+.cls-31, .cls-83 {
+  fill: #eeeffe;
+}
+
+.cls-31, .cls-82 {
+  opacity: 0.22;
+}
+
+.cls-32, .cls-85 {
+  fill: #eceefe;
+}
+
+.cls-32, .cls-84 {
+  opacity: 0.244;
+}
+
+.cls-33, .cls-87 {
+  fill: #eaecfe;
+}
+
+.cls-33, .cls-86 {
+  opacity: 0.268;
+}
+
+.cls-34, .cls-89 {
+  fill: #e8eafe;
+}
+
+.cls-34, .cls-88 {
+  opacity: 0.293;
+}
+
+.cls-35, .cls-91 {
+  fill: #e7e8fd;
+}
+
+.cls-35, .cls-90 {
+  opacity: 0.317;
+}
+
+.cls-36, .cls-93 {
+  fill: #e5e7fd;
+}
+
+.cls-36, .cls-92 {
+  opacity: 0.341;
+}
+
+.cls-37, .cls-95 {
+  fill: #e3e5fd;
+}
+
+.cls-37, .cls-94 {
+  opacity: 0.366;
+}
+
+.cls-38, .cls-97 {
+  fill: #e1e3fd;
+}
+
+.cls-38, .cls-96 {
+  opacity: 0.39;
+}
+
+.cls-39, .cls-99 {
+  fill: #e7e7e7;
+}
+
+.cls-39, .cls-98 {
+  opacity: 0.415;
+}
+
+.cls-101, .cls-40 {
+  fill: #e7e7e7;
+}
+
+.cls-100, .cls-40 {
+  opacity: 0.439;
+}
+
+.cls-103, .cls-41 {
+  fill: #e7e7e7;
+}
+
+.cls-102, .cls-41 {
+  opacity: 0.463;
+}
+
+.cls-105, .cls-42 {
+  fill: #e7e7e7;
+}
+
+.cls-104, .cls-42 {
+  opacity: 0.488;
+}
+
+.cls-107, .cls-43 {
+  fill: #e7e7e7;
+}
+
+.cls-106, .cls-43 {
+  opacity: 0.512;
+}
+
+.cls-109, .cls-44 {
+  fill: #e7e7e7;
+}
+
+.cls-108, .cls-44 {
+  opacity: 0.537;
+}
+
+.cls-111, .cls-45 {
+  fill: #e7e7e7;
+}
+
+.cls-110, .cls-45 {
+  opacity: 0.561;
+}
+
+.cls-113, .cls-46 {
+  fill: #e7e7e7;
+}
+
+.cls-112, .cls-46 {
+  opacity: 0.585;
+}
+
+.cls-115, .cls-47 {
+  fill: #e7e7e7;
+}
+
+.cls-114, .cls-47 {
+  opacity: 0.61;
+}
+
+.cls-117, .cls-48 {
+  fill: #e7e7e7;
+}
+
+.cls-116, .cls-48 {
+  opacity: 0.634;
+}
+
+.cls-119, .cls-49 {
+  fill: #e7e7e7;
+}
+
+.cls-118, .cls-49 {
+  opacity: 0.659;
+}
+
+.cls-121, .cls-50 {
+  fill: #e7e7e7;
+}
+
+.cls-120, .cls-50 {
+  opacity: 0.683;
+}
+
+.cls-123, .cls-51 {
+  fill: #e7e7e7;
+}
+
+.cls-122, .cls-51 {
+  opacity: 0.707;
+}
+
+.cls-125, .cls-52 {
+  fill: #e7e7e7;
+}
+
+.cls-124, .cls-52 {
+  opacity: 0.732;
+}
+
+.cls-127, .cls-53 {
+  fill: #e7e7e7;
+}
+
+.cls-126, .cls-53 {
+  opacity: 0.756;
+}
+
+.cls-129, .cls-54 {
+  fill: #e7e7e7;
+}
+
+.cls-128, .cls-54 {
+  opacity: 0.78;
+}
+
+.cls-130, .cls-55 {
+  opacity: 0.805;
+}
+
+.cls-132, .cls-56 {
+  fill: #e7e7e7;
+}
+
+.cls-131, .cls-56 {
+  opacity: 0.829;
+}
+
+.cls-134, .cls-57 {
+  fill: #e7e7e7;
+}
+
+.cls-133, .cls-57 {
+  opacity: 0.854;
+}
+
+.cls-136, .cls-58 {
+  fill: #e7e7e7;
+}
+
+.cls-135, .cls-58 {
+  opacity: 0.878;
+}
+
+.cls-138, .cls-59 {
+  fill: #e7e7e7;
+}
+
+.cls-137, .cls-59 {
+  opacity: 0.902;
+}
+
+.cls-140, .cls-60 {
+  fill: #e7e7e7;
+}
+
+.cls-139, .cls-60 {
+  opacity: 0.927;
+}
+
+.cls-142, .cls-61 {
+  fill: #e7e7e7;
+}
+
+.cls-141, .cls-61 {
+  opacity: 0.951;
+}
+
+.cls-144, .cls-62 {
+  fill: #e7e7e7;
+}
+
+.cls-143, .cls-62 {
+  opacity: 0.976;
+}
+
+.cls-63 {
+  fill: #ffdfd6;
+}
+
+.cls-64 {
+  fill: #717386;
+}
+
+.cls-65 {
+  fill: #3a3c4e;
+}
+
+.cls-146 {
+  fill: #fe5e31;
+}
+
+.cls-147 {
+  opacity: 0.35;
+}
+
+.cls-148 {
+  fill: #ff5f00;
+}
+
+.cls-149 {
+  fill: #ff7f33;
 }
