--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,159 +1,222 @@
-
 <main class="container">
 
 
-  <div class="pt-5 pb-5 mb-4 rounded-3">
-    <div class="container-fluid py-5">
+  <div class="pt-2 pb-5 mb-4 rounded-3 bg">
+    <div class="container-fluid">
       <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-      <p class="col-md-8 fs-6 small">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+      <p class="col-md-5 fs-6 small">Using a series of utilities, you can create this jumbotron, just like the one in
+        previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your
+        liking.</p>
       <button class="btn btn-primary mt-3" type="button">Example button</button>
     </div>
   </div>
   <br>
   <br>
+
   <div class="row align-items-md-stretch">
     <div class="col-md-6">
-      <div class="h-100 p-5 text-bg-dark rounded-3">
+      <div class="h-100 p-5 bg-light rounded-3">
         <h2>Change the background</h2>
-        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix
+          and match with additional component themes and more.</p>
         <button class="btn btn-outline-light" type="button">Example button</button>
       </div>
     </div>
     <div class="col-md-6">
-      <div class="h-100 p-5 bg-light border rounded-3">
+      <div class="h-100 p-5 rounded-3">
         <h2>Add borders</h2>
-        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+        <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to
+          look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's
+          content for equal-height.</p>
         <button class="btn btn-outline-secondary" type="button">Example button</button>
       </div>
     </div>
   </div>
 
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div class="pricing-header pb-md-4 mx-auto text-center pt-5 pb-5">
-    <h1 class="display-4 fw-normal p-large"><strong>Pricing</strong></h1>
-    <div class="text-container">
-      <h4>In gravida at nunc sodales pretium. Vivamus semper, odio vitae mattis auctor, elit elit semper magna rico</h4>
-      <p class="p-large">Ac tristique velit sapien vitae eros. Praesent ut erat a tellus cursus pharetra finibus posuere nisi. Vivamus feugiat tincidunt sem pre toro</p>
+  <div class="container py-5 col-11">
+    <div class="pricing-header pb-md-4 mx-auto text-center pt-5 pb-5">
+      <h1 class="display-4 fw-normal p-large"><strong>Pricing</strong></h1>
+      <div class="text-container">
+        <h4>In gravida at nunc sodales pretium. Vivamus semper, odio vitae mattis auctor, elit elit semper magna
+          rico</h4>
+        <p class="p-large">Ac tristique velit sapien vitae eros. Praesent ut erat a tellus cursus pharetra finibus
+          posuere nisi. Vivamus feugiat tincidunt sem pre toro</p>
+      </div>
     </div>
-  </div>
 
-  <br>
-  <br>
-  <br>
+    <br>
+    <br>
+    <br>
 
-  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h2 class="my-0 fw-normal">Free</h2>
+    <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h2 class="my-0 fw-normal">Free</h2>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$0
+              <small class="text-muted fw-light">/mo</small>
+            </h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>10 users included</li>
+              <li>2 GB of storage</li>
+              <li>Email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary small">Sign up for free</button>
+          </div>
         </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>10 users included</li>
-            <li>2 GB of storage</li>
-            <li>Email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary small">Sign up for free</button>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm">
+          <div class="card-header py-3">
+            <h2 class="my-0 fw-normal">Pro</h2>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$15
+              <small class="text-muted fw-light">/mo</small>
+            </h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>20 users included</li>
+              <li>10 GB of storage</li>
+              <li>Priority email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-primary small">Get started</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+          <div class="card-header py-3 text-bg-primary border-primary">
+            <h2 class="my-0 fw-normal">Enterprise</h2>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$29
+              <small class="text-muted fw-light">/mo</small>
+            </h1>
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>30 users included</li>
+              <li>15 GB of storage</li>
+              <li>Phone and email support</li>
+              <li>Help center access</li>
+            </ul>
+            <button type="button" class="w-100 btn btn-lg btn-primary small">Contact us</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm">
-        <div class="card-header py-3">
-          <h2 class="my-0 fw-normal">Pro</h2>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small></h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>20 users included</li>
-            <li>10 GB of storage</li>
-            <li>Priority email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-primary small">Get started</button>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card mb-4 rounded-3 shadow-sm border-primary">
-        <div class="card-header py-3 text-bg-primary border-primary">
-          <h2 class="my-0 fw-normal">Enterprise</h2>
-        </div>
-        <div class="card-body">
-          <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>30 users included</li>
-            <li>15 GB of storage</li>
-            <li>Phone and email support</li>
-            <li>Help center access</li>
-          </ul>
-          <button type="button" class="w-100 btn btn-lg btn-primary small">Contact us</button>
-        </div>
-      </div>
+
+    <h2 class="display-6 text-center mb-4">Compare plans</h2>
+
+    <div class="table-responsive">
+      <table class="table text-center">
+        <thead>
+        <tr>
+          <th style="width: 34%;"></th>
+          <th style="width: 22%;">Free</th>
+          <th style="width: 22%;">Pro</th>
+          <th style="width: 22%;">Enterprise</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <th scope="row" class="text-start">Public</th>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row" class="text-start">Private</th>
+          <td></td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        </tbody>
+
+        <tbody>
+        <tr>
+          <th scope="row" class="text-start">Permissions</th>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row" class="text-start">Sharing</th>
+          <td></td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row" class="text-start">Unlimited members</th>
+          <td></td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row" class="text-start">Extra security</th>
+          <td></td>
+          <td></td>
+          <td>
+            <svg class="bi" width="24" height="24">
+              <use xlink:href="bootstrap-icons.svg#check"/>
+            </svg>
+          </td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 
-  <h2 class="display-6 text-center mb-4">Compare plans</h2>
-
-  <div class="table-responsive">
-    <table class="table text-center">
-      <thead>
-      <tr>
-        <th style="width: 34%;"></th>
-        <th style="width: 22%;">Free</th>
-        <th style="width: 22%;">Pro</th>
-        <th style="width: 22%;">Enterprise</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <th scope="row" class="text-start">Public</th>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      <tr>
-        <th scope="row" class="text-start">Private</th>
-        <td></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      </tbody>
-
-      <tbody>
-      <tr>
-        <th scope="row" class="text-start">Permissions</th>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      <tr>
-        <th scope="row" class="text-start">Sharing</th>
-        <td></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      <tr>
-        <th scope="row" class="text-start">Unlimited members</th>
-        <td></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      <tr>
-        <th scope="row" class="text-start">Extra security</th>
-        <td></td>
-        <td></td>
-        <td><svg class="bi" width="24" height="24"><use xlink:href="bootstrap-icons.svg#check"/></svg></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
 </main>
 
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
